# dictionary-rs

./: Cargo.toml  Makefile  README.md  Setup.md  compose.yaml
.github/workflows/: publish.yaml
migrations/.mariadb/: up.sql
src/: constants.rs  lib.rs  main.rs
src/dictionary/: application.rs  domain.rs
src/entry/: application.rs  domain.rs  repository.rs
