[package]
name = "dictionary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
tokio = { version = "1.15.0", features = ["full"] }
sqlx = { version = "0.6.0", features = [
    "runtime-tokio-rustls",
    "mysql",
] }
