[package]
name = "dictionary"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_once = "0.2.6"
async-trait = "0.1.53"
tokio = { version = "1.15.0", features = ["full"] }
sqlx = { version = "0.5.8", features = [
    "runtime-tokio-rustls",
    "mysql",
]}
log = "0.4.17"
argh = "0.1.8"
teloxide = { version = "0.10", features = ["macros", "auto-send"] }
futures = "0.3.21"
rand = "0.8"
